@@ -1,7 +1,7 @@
-<!-- wp:columns {"style":{"spacing":{"blockGap":"0 1rem"}},"className":"flex-column flex-md-row pt-5"} -->
+<!-- wp:columns {"style":{"spacing":{"blockGap":"1rem"}},"className":"flex-column flex-md-row pt-5"} -->
 <div class="wp-block-columns flex-column flex-md-row pt-5">
-	<!-- wp:column {"className":"mb-5"} -->
-	<div class="wp-block-column mb-5">
+	<!-- wp:column {"className":"mb-3"} -->
+	<div class="wp-block-column mb-3">
 		<!-- wp:heading {"level":4} -->
 		<h4>ABOUT THIS SITE</h4>
 		<!-- /wp:heading -->
@@ -10,16 +10,16 @@
 		<!-- /wp:paragraph -->
 	</div>
 	<!-- /wp:column -->
-	<!-- wp:column {"className":"mb-5"} -->
-	<div class="wp-block-column mb-5">
+	<!-- wp:column {"className":"mb-3"} -->
+	<div class="wp-block-column mb-3">
 		<!-- wp:heading {"level":4} -->
 		<h4>RECENT POSTS</h4>
 		<!-- /wp:heading -->
 		<!-- wp:latest-posts {"postsToShow":1,"displayPostContent":true,"excerptLength":10,"displayAuthor":true,"displayPostDate":true,"displayFeaturedImage":true,"featuredImageSizeSlug":"medium","addLinkToFeaturedImage":true} /-->
 	</div>
 	<!-- /wp:column -->
-	<!-- wp:column {"className":"mb-5"} -->
-	<div class="wp-block-column mb-5">
+	<!-- wp:column {"className":"mb-3"} -->
+	<div class="wp-block-column mb-3">
 		<!-- wp:heading {"level":4} -->
 		<h4>RECENT COMMENTS</h4>
 		<!-- /wp:heading -->
