@@ -10,6 +10,7 @@ v5.3.3
 - Removed - Navigation Area block used in header (will be deprecated until WP 5.9)
 - Added - Header/Footer/Query patterns and show them into block types
 - Added - Comments Pagination
+- Added - Block Patterns index.json to extend glob registration with custom pattern attributes (description, name etc)
 
 v5.3.2
 - Removed - Gutenberg hide title plugin (and related PHP code) - not necessary in a FSE theme
